    things from backwards: ``a[^1]`` is like Python's ``a[-1]``.
  - A first version of the specification and implementation of the overloading
    of the assignment operator has arrived!
  - ``system.len`` for strings and sequences now returns 0 for nil.

  - A single underscore can now be used to discard values when unpacking tuples.


  Library additions
  -----------------

  - ``reversed`` proc added to the ``unicode`` module.
  - Added multipart param to httpclient's ``post`` and ``postContent`` together
    with a ``newMultipartData`` proc.
  - Added `%*` operator for JSON.
  - The compiler is now available as Nimble package for c2nim.
  - Added ``..^`` and ``..<`` templates to system so that the rather annoying
    space between ``.. <`` and ``.. ^`` is not necessary anymore.
  - Added ``system.xlen`` for strings and sequences to get back the old ``len``
    operation that doesn't check for ``nil`` for efficiency.


  Bugfixes
  --------

  - Fixed internal compiler error when using ``char()`` in an echo call
    (`#1788 <https://github.com/Araq/Nim/issues/1788>`_).
  - Fixed Windows cross-compilation on Linux.
  - Overload resolution now works for types distinguished only by a
    ``static[int]`` param
    (`#1056 <https://github.com/Araq/Nim/issues/1056>`_).
  - Other fixes relating to generic types and static params.
  - Fixed some compiler crashes with unnamed tuples
    (`#1774 <https://github.com/Araq/Nim/issues/1774>`_).
  - Fixed ``channels.tryRecv`` blocking
    (`#1816 <https://github.com/Araq/Nim/issues/1816>`_).
  - Fixed generic instantiation errors with ``typedesc``
    (`#419 <https://github.com/Araq/Nim/issues/419>`_).
  - Fixed generic regression where the compiler no longer detected constant
    expressions properly (`#544 <https://github.com/Araq/Nim/issues/544>`_).
  - Fixed internal error with generic proc using ``static[T]`` in a specific
    way (`#1049 <https://github.com/Araq/Nim/issues/1049>`_).
  - More fixes relating to generics